force-app/main/default/objects/Sales_Order_Commissions__c/Sales_Order_Commissions__c.object-meta.xml
<CustomObject>
    <label>Commissions</label>
    <nameField>
        <displayFormat>SOC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>