force-app/main/default/objects/Sales_Order_Commissions__c/fields/Billing_Cash_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cash_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Cash Receipt</label>
    <referenceTo>AcctSeed__Billing_Cash_Receipt__c</referenceTo>
    <relationshipName>Sales_Order_Commissions_BillingCash</relationshipName>
    <type>Lookup</type>
</CustomField>