force-app/main/default/objects/Sales_Order_Commissions__c/fields/Billing_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Billing_Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Credit Memo</label>
    <referenceTo>AcctSeed__Billing_Credit_Memo__c</referenceTo>
    <relationshipName>Sales_Order_Commissions_BillingMemo</relationshipName>
    <type>Lookup</type>
</CustomField>