force-app/main/default/objects/Sales_Order_Commissions__c/fields/Billing_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Paid_Date__c</fullName>
    <label>Billing Paid Date</label>
    <type>DateTime</type>
</CustomField>