force-app/main/default/objects/Sales_Order_Commissions__c/fields/Billing_Payment__c.field-meta.xml
<CustomField>
    <fullName>Billing_Payment__c</fullName>
    <formula>IF(!ISBLANK(Billing_Cash_Receipt__c), Billing_Cash_Receipt__r.AcctSeed__Applied_Amount__c, Billing_Credit_Memo__r.AcctSeed__Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>