force-app/main/default/objects/Sales_Order_Commissions__c/fields/Commission_Balance__c.field-meta.xml
<CustomField>
    <fullName>Commission_Balance__c</fullName>
    <formula>Commission_Amount__c - Commission_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>