force-app/main/default/objects/Sales_Order_Commissions__c/fields/Commission_Balance_Secure__c.field-meta.xml
<CustomField>
    <fullName>Commission_Balance_Secure__c</fullName>
    <formula>IF(
AND(CONTAINS($Profile.Name, &apos;Inside Sales&apos;), 
OR(Owner__c = $User.Id, Referral_Sales_Rep__c = $User.Id )), 
Commission_Balance__c, 
IF(OR(CONTAINS($Profile.Name, &apos;Account&apos;), 
$Profile.Name = &apos;System Administrator&apos;), 
Commission_Balance__c, 
null))</formula>
    <label>Commission Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>