force-app/main/default/objects/Sales_Order_Commissions__c/fields/Commission_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid_Date__c</fullName>
    <label>Commission Paid Date</label>
    <type>DateTime</type>
</CustomField>