force-app/main/default/objects/Sales_Order_Commissions__c/fields/Commission_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Unpaid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Unpaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>