force-app/main/default/objects/Sales_Order_Commissions__c/fields/Credit_Order__c.field-meta.xml
<CustomField>
    <fullName>Credit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Order</label>
    <referenceTo>Credit_Order__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Sales_Order_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>