force-app/main/default/objects/Sales_Order_Commissions__c/fields/Expense_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_GL_Account__c</fullName>
    <formula>Sales_Order__r.AcctSeedERP__Customer__r.AcctSeed__Default_Expense_GL_Account__c</formula>
    <label>Expense GL Account</label>
    <type>Text</type>
</CustomField>