force-app/main/default/objects/Sales_Order_Commissions__c/fields/Invoice_Memo__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Memo__c</fullName>
    <formula>IF(!ISBLANK(Billing_Credit_Memo__c), HYPERLINK(&apos;/&apos; + Billing_Credit_Memo__c, 
																																																	Billing_Credit_Memo__r.Name),
																																																	HYPERLINK(&apos;/&apos; + Billing_Cash_Receipt__c, 
																																																	Billing_Cash_Receipt__r.Name))</formula>
    <label>Invoice/Memo</label>
    <type>Text</type>
</CustomField>