force-app/main/default/objects/Sales_Order_Commissions__c/fields/Manufacturer_Rep__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Type__c</field>
            <operation>equals</operation>
            <value>Sales Represantative</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Commissions (Manufacturer Rep)</relationshipLabel>
    <relationshipName>Sales_Order_Commissions_ManuRep</relationshipName>
    <type>Lookup</type>
</CustomField>