force-app/main/default/objects/Sales_Order_Commissions__c/fields/Payable_Balances__c.field-meta.xml
<CustomField>
    <fullName>Payable_Balances__c</fullName>
    <inlineHelpText>Total sum of related payable balances to current commission</inlineHelpText>
    <label>Payable_Balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>