force-app/main/default/objects/Sales_Order_Commissions__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Number</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipName>Sales_Order_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>