force-app/main/default/objects/Sales_Order_Commissions__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>IF(!ISBLANK(Owner__c), &apos;Owner&apos;,
IF(!ISBLANK(Referral_Sales_Rep__c), &apos;Referral Sales Rep&apos;,
		IF(!ISBLANK(Manufacturer_Rep__c), &apos;Manufacturer Rep&apos;, 
IF(!ISBLANK(Specified_Rep__c), &apos;Specified Rep&apos;,
IF(!ISBLANK(Sales_Rep_Company_Name__c), &apos;Sales Rep Company&apos;, &apos;&apos;)))))</formula>
    <label>Role</label>
    <type>Text</type>
</CustomField>