force-app/main/default/objects/Sales_Order_Commissions__c/fields/Sales_Order_Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Fully_Paid__c</fullName>
    <formula>Sales_Order__r.Balance__c = 0</formula>
    <label>Sales Order Fully Paid</label>
    <type>Checkbox</type>
</CustomField>