force-app/main/default/objects/Sales_Order_Commissions__c/fields/Sales_Rep_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Order_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>