force-app/main/default/objects/Sales_Order_Commissions__c/fields/SO_Commission_Payables_Count__c.field-meta.xml
<CustomField>
    <fullName>SO_Commission_Payables_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SO Commission Payables Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>