force-app/main/default/objects/Sales_Order_Commissions__c/fields/Specified_Rep__c.field-meta.xml
<CustomField>
    <fullName>Specified_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specified Rep</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Type__c</field>
            <operation>equals</operation>
            <value>Specified Representative</value>
        </filterItems>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Type__c</field>
            <operation>equals</operation>
            <value>Manufacture Representative</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Order_Commissions1</relationshipName>
    <type>Lookup</type>
</CustomField>