force-app/main/default/objects/Sales_Order_Commissions__c/fields/test1__c.field-meta.xml
<CustomField>
    <fullName>test1__c</fullName>
    <description>test</description>
    <inlineHelpText>test</inlineHelpText>
    <label>test1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>