force-app/main/default/objects/Sales_Order_Commissions__c/validationRules/Do_not_let_change_commission_holder.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_let_change_commission_holder</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()), 
OR(
ISCHANGED(Owner__c), 
AND(
SO_Commission_Payables_Count__c &gt; 0,
ISCHANGED(Manufacturer_Rep__c)
), 
ISCHANGED(Referral_Sales_Rep__c),
ISCHANGED(Sales_Rep_Company_Name__c)
)
)</errorConditionFormula>
    <errorMessage>Commission Holder such as Owner, Sales Rep Company, Manufacturer Rep or Referral Sales Rep cannot be edited.</errorMessage>
</ValidationRule>