force-app/main/default/objects/Sales_Order_Commissions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Commission_Amount_Secure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>