force-app/main/default/objects/Sales_Order_Commissions__c/listViews/Paid.listView-meta.xml
<ListView>
    <fullName>Paid</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Commission_Amount_Secure__c</columns>
    <filterScope>Everything</filterScope>
    <label>Paid</label>
</ListView>