force-app/main/default/objects/Sales_Order_Commissions__c/listViews/Unpaid.listView-meta.xml
<ListView>
    <fullName>Unpaid</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Commission_Amount_Secure__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Unpaid</label>
</ListView>